# xjtu

./: README.md
2022国赛/: README.md
2022国赛/CUMCM2022Problems/: format2022.doc
2022国赛/支撑材料/第一问支撑材料/: BD_poly.m  curve_K.m  卡方检验.sav  (+22 more)
2022美赛/: BCHAIN-MKPRU.xlsx  LBMA-GOLD.xlsx  README.md
NUS summer workshop/: README.md
NUS summer workshop/Project 2_ Masked-Unmasked Face R/: starter.py
RIP路由器实现/: README.md
Simple pipeline simulator/: README.md  流水线性能分析Ⅱ实验报告.md
Simple pipeline simulator/code/: main.cpp  sim1.txt  sim2_1.txt  sim2_2.txt  sim3_1.txt  sim3_2.txt  sim3_3.txt  sim4.txt  simulator.h  statistic_sim3_2.txt  statistic_sim4.txt
凸优化大作业/: README.md
凸优化大作业/回溯直线搜索+牛顿下降法/: 3-34.py  3-34_0.01.py  3-34_100.py  Backtracking_line_search.m  Newton.m  第二次大作业.aux  第二次大作业.tex
凸优化大作业/标准牛顿法+不可行初始点牛顿法+对偶牛顿法/: Newton_all.m  第三次大作业.aux  第三次大作业.tex
动态链接器/: README.md
单周期多周期CPU设计/: README.md
单周期多周期CPU设计/MIPS汇编程序/: find_max.asm  lw.asm  simple  simple_code
单周期多周期CPU设计/Multi Cycle Processor/: readme.md
单周期多周期CPU设计/Single Cycle Processor/: readme.md
图形学大作业/: README.md
图形学大作业/Scotty3D/: LICENSE.txt  build_win.bat
图形学大作业/Scotty3D/autotest/lab2/: CMakeLists.txt  halfedge.cpp  halfedge.h  meshedit.cpp  objects.inc  test_main.cpp  utils.cpp  utils.h
图形学大作业/Scotty3D/autotest/lab2/std/: cone.txt  cube.txt  cylinder.txt  torus.txt
图形学大作业/rendering code/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Camera.cpp  TriMesh.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
(+128 files in other folders)
